a favicon for the big map

--- a/panwalks_xlarge.html
+++ b/panwalks_xlarge.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Pandemic Walks</title>
+    <link rel="icon" type="image/png" href="panwalks_icon.png"/>
     <style>
     img { 
         width: 300%;
