switch back to webp because avif conversion broke with a brew upgrade

--- a/panwalks_xlarge.html
+++ b/panwalks_xlarge.html
@@ -9,5 +9,5 @@
     }
     </style>
 <body>
-<img src="panwalks_xlarge.avif" width="8535" height="8870"/>
+<img src="panwalks_xlarge.webp" width="8524" height="8870"/>
 </body>
