utf-8 for the html

--- a/panwalks_xlarge.html
+++ b/panwalks_xlarge.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Pandemic Walks</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <link rel="icon" type="image/png" href="panwalks_icon.png"/>
     <style>
     img { 
